Add Java 9+ variant of Records.toTextBlock